plugins {
    id 'java-library'
    id 'architectury-plugin' version '3.5.167'
    id 'dev.architectury.loom' version '1.17.477' apply false
    id "io.github.pacifistmc.forgix" version "1.2.9"
}

architectury {
    minecraft = rootProject.minecraft_version
}

def getAppVersion = { ->
    try {
        def version = providers.exec {
            commandLine 'git', 'describe', '--tags', '--abbrev=0'
        }.standardOutput.asText.get().trim()
        return version
    } catch (Exception e) {
        println "Warning: ${e.message}, is git installed?"
        return "dev"
    }
} as Object


subprojects {
    apply plugin: 'dev.architectury.loom'

    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    }
}

allprojects {
    apply plugin: "maven-publish"
    apply plugin: 'architectury-plugin'

    group = rootProject.groupId
    description = rootProject.displayname
    base.archivesName = rootProject.name
    version = getAppVersion()

    build.finalizedBy(mergeJars)
    assemble.finalizedBy(mergeJars)

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
        it.options.deprecation = true
        it.options.compilerArgs << "-Xmaxerrs" << "1000" << "-Xlint:deprecation" << "-Xlint:unchecked"
    }

    tasks.configureEach { task ->
        if (task instanceof JavaForkOptions) {
            if (task.maxHeapSize == null) {
                task.maxHeapSize = '4G'
            }
            ['--enable-native-access=ALL-UNNAMED'].each { nativeAccessJvmArg ->
                if (!task.jvmArgs.contains(nativeAccessJvmArg)) {
                    task.jvmArgs(nativeAccessJvmArg)
                }
            }
        }
    }

    publishing {
        repositories {
            maven {
                name = "reposiliteRepository"
                url = uri("https://maven.conczin.net/Artifacts")
                credentials {
                    username = System.getenv("MAVEN_USERNAME")
                    password = System.getenv("MAVEN_TOKEN")
                }
            }
        }
    }
}

forgix {
    group = rootProject.groupId
    mergedJarName = "${rootProject.name}-${rootProject.version}-universal.jar"
    outputDir = "build/libs"

    forge {
        jarLocation = "build/libs/${rootProject.name}-${rootProject.version}.jar"
        mixin "mca.mixin.json"
    }

    fabric {
        jarLocation = "build/libs/${rootProject.name}-${rootProject.version}.jar"
    }

    quilt {
        jarLocation = "build/libs/${rootProject.name}-${rootProject.version}.jar"
    }
}